<resources>
    <string name="select_key">Select key</string>
    <string name="select_wallet">Select wallet</string>
    <string name="select_transaction">Select transaction</string>
    <string name="insert_manually">Insert manually</string>
    <string name="scan">Scan</string>

    <string name="random">Random</string>
    <string name="dice">Dice</string>
    <string name="import_mnemonic">Import mnemonic</string>

    <string name="key_exists">This key name already exist</string>
    <string name="deleted">Deleted</string>
    <string name="wallet_not_imported">This is not a json wallet, it is not in the right network, a wallet with the same name already exist or a secret key partecipating in the wallet is not available</string>
    <string name="not_a_psbt">This is not a psbt transaction</string>

    <string name="cancelled">Cancelled</string>
    <string name="select_all">Select a key, a wallet and a transaction</string>
    <string name="invalid_xprv_or_mnemonic">Invalid Xprv or Mnemonic</string>

    <string name="added_signatures">Added signatures</string>
    <string name="no_signatures_added">No signatures added</string>

</resources>

