...
                android:layout_height="wrap_content"
                android:text="Get Address"
                android:layout_margin="4dp"
                />

            <Button
                android:id="@+id/delete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Delete"
                android:layout_margin="4dp"
                />
        </LinearLayout>
...
