...
    <TextView
        android:id="@+id/key_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/select_key"
        android:textSize="20sp"
        app:layout_constraintBaseline_toBaselineOf="@id/key_button"
        app:layout_constraintBottom_toTopOf="@id/wallet_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/key_button"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:text="✏️"
        app:layout_constraintBottom_toTopOf="@id/wallet_button"
        app:layout_constraintLeft_toLeftOf="@id/guideline"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/wallet_text"
...
